syntax = "proto3";

package card_collection;

// Info for card info.
message CardInfo {
    // Id of the card
    string id = 1;
    // Card oracle name
    string name = 2;
    // Image uri
    string image_uri = 3;
    // Card display name
    string printed_name = 4;
    // Card language
    string language = 5;
    // Possible versions. If left empty, only nonfoil is possible.
    repeated string versions = 6;
    // Name of the set
    string set_name = 7;
    // Collector's number.
    string collectors_id = 8;
}

// Info for card in collection
message Card {
    int32 id = 1;
    // Card info
    CardInfo card_info = 2;
    // If left empty, nonfoil
    string version = 3;
    // binder id
    int32 binder_id = 4;
}