syntax = "proto3";

import "binder.proto";
import "card.proto";

package card_collection.service;

// The collection service definition.
service CollectionService {
    // Updates collection metadata from scryfall
    rpc UpdateMetadata (UpdateMetadataRequest) returns (UpdateMetadataResponse) {}
    rpc AddBinder (AddBinderRequest) returns (AddBinderResponse) {}
    rpc ListBinders (ListBindersRequest) returns (ListBindersResponse) {}
    rpc UpdateBinder (UpdateBinderRequest) returns (UpdateBinderResponse) {}
    rpc DeleteBinder (DeleteBinderRequest) returns (DeleteBinderResponse) {}
    rpc QueryCardInfoByName (QueryCardInfoByNameRequest) returns (QueryCardInfoByNameResponse) {}
}

message UpdateMetadataRequest {
}

message UpdateMetadataResponse {
    // A counter for downloaded cards count.
    int32 cards_downloaded = 1;
    // A counter for downloaded sets count.
    int32 sets_downloaded = 2;
    // A counter for downloaded oracle count.
    int32 oracle_downloaded = 3;
}

message AddBinderRequest {
    string name = 1;
}

message AddBinderResponse {
}

message ListBindersRequest {
}

message ListBindersResponse {
    repeated card_collection.Binder binders = 1;
}

message UpdateBinderRequest{
    int32 id = 1;
    string new_name = 2;
}

message UpdateBinderResponse {
}

message DeleteBinderRequest {
    int32 id = 1;
}

message DeleteBinderResponse {
}

message QueryCardInfoByNameRequest {
    // Will be used for partial match
    string query = 1;
}

message QueryCardInfoByNameResponse {
    repeated card_collection.CardInfo info = 1;
}